initial version, profile implemented, but not adjusted, no echo data yet

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 rock_library(alt_imagenex
-    SOURCES Dummy.cpp
-    HEADERS Dummy.hpp)
+    SOURCES Driver.cpp AltHandler.cpp
+    HEADERS Driver.hpp AltHandler.hpp AltTypes.hpp AltRaw.hpp
+    DEPS_PKGCONFIG base-types iodrivers_base base-lib)
 
 rock_executable(alt_imagenex_bin Main.cpp
     DEPS alt_imagenex)
